Atualização do README e configuração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.artemis.pool.block-if-full-timeout=5000
 narayana.dbcp.enabled=true
 narayana.dbcp.maxTotal=10
 narayana.dbcp.maxWaitMillis=5000
-narayana.lrco.enabled=true
+narayana.lrco.enabled=false
 narayana.messaginghub.enabled=true
 narayana.messaginghub.maxConnections=1
 narayana.messaginghub.blockIfSessionPoolIsFull=true
